--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "stylelint-vscode": "^7.0.0-6"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "dotenv": "^10.0.0",
     "lodash": "^4.17.21",
     "navigo": "^7.1.3",
     "node": "^15.8.0",
+    "nodemon": "^2.0.13",
     "parcel-bundler": "^1.12.5",
     "yargs-parser": ">=13.1.2"
   }
